[Fix #552] Disable default style for buttons on iOS

--- a/app/assets/stylesheets/new_design/buttons.scss
+++ b/app/assets/stylesheets/new_design/buttons.scss
@@ -10,6 +10,7 @@
   background-color: #FFFFFF;
   color: $black;
   cursor: pointer;
+  -webkit-appearance: none;
 
   &:hover {
     background: $light-grey;
